build: bump BioCommons from 3.0.9 to 3.1.5 (#91)